<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="stCondition" Id="{c5a5456f-158f-45dd-a732-ef468062b192}">
    <Declaration><![CDATA[TYPE stCondition :
STRUCT
	lrVelocity			: LREAL;
	lrAcceleration		: LREAL;
	lrDeceleration		: LREAL;
	lrJerk				: LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>